# rublock

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  ROADMAP_PLAN.md  benchmark.sh  benchmarks.md  mise.toml
.github/workflows/: browser-tests.yml  deploy.yml
benches/: solver_bench.rs
src/: backtrack.rs  basic_solver.rs  black_solver.rs  changeset.rs  enumerate.rs  grid.rs  lib.rs  main.rs  queue_solver.rs  recorder.rs  solver.rs  stats.rs  wasm.rs
web/: .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: analytics.ts  main.ts
web/src/components/: App.svelte  BottomNav.svelte  EmojiRain.svelte  Header.svelte  InputBar.svelte  PageHeader.svelte  PuzzleGrid.svelte
web/src/components/tabs/: ExplainTab.svelte  HowToTab.svelte  PlayTab.svelte  PrintTab.svelte  SolveTab.svelte  WalkthroughTab.svelte
web/src/state/: puzzle.svelte.ts  types.ts  url.svelte.ts
web/src/styles/: global.css  puzzle.css
web/src/wasm/: api.ts  pkg-types.d.ts
web/tests/: app-loads.spec.ts  cell-interactions.spec.ts  cross-tab.spec.ts  fixtures.ts  solve-tab.spec.ts  url-sharing.spec.ts  walkthrough-tab.spec.ts
