[package]
name = "rublock"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solver_bench"
harness = false

[profile.profiling]
inherits = "release"
debug = true
