[package]
name = "rublock"
version = "0.1.0"
edition = "2024"
description = "A solver and puzzle generator for the Doplo grid number puzzle."
license = "MIT"
repository = "https://github.com/Sjlver/rublock"
readme = "README.md"
keywords = ["puzzle", "solver", "constraints"]
categories = ["algorithms", "command-line-utilities"]
authors = ["Jonas Wagner <jonas@purpureus.net>"]

[dependencies]
rayon = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solver_bench"
harness = false

[profile.profiling]
inherits = "release"
debug = true
